# spec/openapi.yaml
@@ -218,88 +218,6 @@ paths:
         parameters to filter the checks that you want implemented
       tags:
         - monitoring
-  /metrics:
-    get:
-      operationId: MonitoringController_metrics
-      parameters: []
-      responses:
-        '200':
-          description: Grafana-ready metrics without any extra formatting from the server side
-          schema:
-            example: |-
-              # HELP process_cpu_user_seconds_total Total user CPU time spent in seconds.
-                      # TYPE process_cpu_user_seconds_total counter
-                      process_cpu_user_seconds_total 0.122049
-
-                      # HELP process_cpu_system_seconds_total Total system CPU time spent in seconds.
-                      # TYPE process_cpu_system_seconds_total counter
-                      process_cpu_system_seconds_total 0.014626...
-          content:
-            application/json:
-              schema:
-                type: string
-        '500':
-          description: Generic unknown error produced by an unidentified exception
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  statusCode:
-                    type: number
-                    example: 500
-                  error:
-                    type: string
-                    example: Internal Server Error
-                  message:
-                    type: string
-                    example: Internal server error
-                    description: The sort of error message you can expect
-                  emitter:
-                    type: string
-                    example: ErrorProducerModule
-                    description: If the error was produced within the codebase, the name of the module where it was created
-                  timestamp:
-                    type: string
-                    example: '2024-09-14T22:00:00.000Z'
-                  path:
-                    type: string
-                    example: /path/of/the/failing/route
-                    description: Endpoint responsible for the production of the error
-        '503':
-          description: The event loop is lagging and no more requests can be attended right now
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  statusCode:
-                    type: number
-                    example: 503
-                  error:
-                    type: string
-                    example: Service Unavailable
-                  message:
-                    type: string
-                    example: Server is too busy
-                    description: The sort of error message you can expect
-                  emitter:
-                    type: string
-                    example: ErrorProducerModule
-                    description: If the error was produced within the codebase, the name of the module where it was created
-                  timestamp:
-                    type: string
-                    example: '2024-09-14T22:00:00.000Z'
-                  path:
-                    type: string
-                    example: /path/of/the/failing/route
-                    description: Endpoint responsible for the production of the error
-      security:
-        - secret: []
-      summary: Use a Prometheus client to gather default metrics for Grafana monitoring
-      tags:
-        - monitoring
-        - no-validation
   /v1/pico-units:
     post:
       description: Register a Pico unit by handle after verifying it is reachable via mDNS.
